[gd_scene load_steps=5 format=3 uid="uid://7bkgxopkfqec"]

[ext_resource type="Script" uid="uid://d34kxt87csaek" path="res://Scripts/dumb_fish.gd" id="1_2ufvd"]
[ext_resource type="Texture2D" uid="uid://jaegp53ccc7w" path="res://Assets/Spritesheet/platformPack_tilesheet.png" id="2_i5woj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r6g4q"]
radius = 31.144823

[sub_resource type="CircleShape2D" id="CircleShape2D_tunti"]
radius = 36.138622

[node name="DumbFish" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 8
collision_mask = 7
script = ExtResource("1_2ufvd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_i5woj")
region_enabled = true
region_rect = Rect2(643.598, -0.70482635, 60.54236, 67.52798)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_r6g4q")

[node name="Hitbox2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox2D"]
shape = SubResource("CircleShape2D_tunti")

[connection signal="area_entered" from="Hitbox2D" to="." method="_on_hitbox_2d_area_entered"]
[connection signal="area_exited" from="Hitbox2D" to="." method="_on_hitbox_2d_area_exited"]
[connection signal="body_entered" from="Hitbox2D" to="." method="_on_hitbox_2d_body_entered"]
